--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ hr {
           </h1>
           <p class="profile_title">Software Developer</p>
           <p class="description profile_description">
-            The hardwork is very important,it will be followed by the clients,and it will happen at the same time when hardwork and discipline gives the extraordinary results. Over the year, I will come. 
+            The hardwork is very important,it will be followed by the clients,and it will happen at the same time when hardwork and discipline gives the extraordinary results. Over the year. 
           </p>
           <a class="downloadBtn" href="./cv.pdf" download="Resume.pdf">Download Resume</a>
         </div>
